--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,11 @@ maintainers = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "fastapi>=0.115.0",
     "chroma-hnswlib==0.7.6",
     "chromadb==0.5.11",
+    "google-genai>=1.33.0",
+    "httpx>=0.27.0",
     "ipykernel>=6.30.1",
     "jupyter>=1.1.1",
     "langchain==0.2.9",
@@ -31,6 +34,7 @@ dependencies = [
     "pymupdfb==1.24.9",
     "redis>=6.3.0",
     "streamlit==1.37.0",
+    "uvicorn>=0.30.0",
 ]
 
 [dependency-groups]
