--- a/.github/workflows/architecture-docs.yml
+++ b/.github/workflows/architecture-docs.yml
@@ -13,13 +13,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
           python-version: "3.11"
 
       - name: Generate module dependency diagram
-        run: python scripts/generate_module_dependency_diagram.py
+        run: uv run python scripts/generate_module_dependency_diagram.py
 
       - name: Validate architecture documentation
         run: bash scripts/validate_architecture_docs.sh
