feat(runtime): add circuit breaker telemetry and release smoke gates

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ GEMINI_API_KEY=your-gemini-api-key
 REDIS_URL=redis://localhost:6379/0
 CANLII_API_KEY=your-canlii-api-key
 API_BEARER_TOKEN=your-api-bearer-token
+ENVIRONMENT=development
+PROVIDER_CIRCUIT_BREAKER_FAILURE_THRESHOLD=3
+PROVIDER_CIRCUIT_BREAKER_OPEN_SECONDS=30
