--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -37,5 +37,8 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/validate_source_registry.py
 
+      - name: Validate legal review checklist template
+        run: uv run python scripts/validate_legal_review_checklist.py
+
       - name: Repository hygiene checks
         run: bash scripts/check_repository_hygiene.sh
