--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Validate legal review checklist template
         run: uv run python scripts/validate_legal_review_checklist.py
 
+      - name: Scan for Canada domain leaks
+        run: uv run python scripts/scan_domain_leaks.py
+
       - name: Generate jurisdictional evaluation report
         env:
           PYTHONPATH: src
