--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -44,11 +44,20 @@ jobs:
       - name: Verify release evaluation artifacts
         run: uv run python scripts/verify_release_eval_artifacts.py
 
+      - name: Validate release runtime flags (production-safe)
+        env:
+          API_BEARER_TOKEN: release-smoke-token
+          ENVIRONMENT: ci
+          ENABLE_SCAFFOLD_PROVIDER: "true"
+          ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
+        run: uv run python scripts/validate_release_runtime_flags.py
+
       - name: Run staging API smoke tests
         env:
           API_BEARER_TOKEN: release-smoke-token
           ENVIRONMENT: ci
           ENABLE_SCAFFOLD_PROVIDER: "true"
+          ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
         run: bash scripts/run_api_smoke_tests.sh
 
       - name: Repository hygiene checks
