feat: enhance Canada jurisdiction hardening, update chat and doc maintenance scripts

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,30 @@
-OPENAI_API_KEY=your-openai-api-key
-GEMINI_API_KEY=your-gemini-api-key
-REDIS_URL=redis://localhost:6379/0
-CANLII_API_KEY=your-canlii-api-key
-API_BEARER_TOKEN=your-api-bearer-token
+# Shared
 ENVIRONMENT=development
+DEFAULT_LOCALE=en-CA
+
+# Streamlit UI -> FastAPI
+API_BASE_URL=http://127.0.0.1:8000
+UI_API_TIMEOUT_SECONDS=30
+
+# API auth (required in production/prod/ci)
+API_BEARER_TOKEN=your-api-bearer-token
+
+# Providers
+OPENAI_API_KEY=your-openai-api-key
+OPENAI_MODEL=gpt-4o-mini
+GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL=gemini-2.5-flash
+ENABLE_SCAFFOLD_PROVIDER=true
+ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
+PROVIDER_TIMEOUT_SECONDS=15
+PROVIDER_MAX_RETRIES=1
 PROVIDER_CIRCUIT_BREAKER_FAILURE_THRESHOLD=3
 PROVIDER_CIRCUIT_BREAKER_OPEN_SECONDS=30
+
+# Search / external data
+CANLII_API_KEY=your-canlii-api-key
+CANLII_BASE_URL=https://api.canlii.org/v1
+
+# Rate limiting / cache
+API_RATE_LIMIT_PER_MINUTE=120
+REDIS_URL=redis://localhost:6379/0
