--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -41,6 +41,9 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/run_jurisdictional_test_suite.py
 
+      - name: Validate release evaluation artifacts
+        run: uv run python scripts/validate_release_artifacts.py
+
       - name: Run staging API smoke tests
         env:
           API_BEARER_TOKEN: release-smoke-token
