feat: [US-005] - [Enforce no synthetic citations in production]

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ API_BEARER_TOKEN=your-api-bearer-token
 ENVIRONMENT=development
 PROVIDER_CIRCUIT_BREAKER_FAILURE_THRESHOLD=3
 PROVIDER_CIRCUIT_BREAKER_OPEN_SECONDS=30
+ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
