--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
 
 # Frontend (frontend-web)
 NEXT_PUBLIC_IMMCAD_API_BASE_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
