--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -21,6 +21,24 @@ jobs:
       - name: Sync dependencies
         run: uv sync --dev
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend-web/package-lock.json
+
+      - name: Install frontend dependencies
+        run: npm ci --prefix frontend-web
+
+      - name: Frontend typecheck
+        run: npm run typecheck --prefix frontend-web
+
+      - name: Frontend contract tests
+        env:
+          CI: "true"
+        run: npm run test --prefix frontend-web
+
       - name: Lint API and tests scope
         run: uv run ruff check src/immcad_api tests
 
