--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "test": "npm run typecheck"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "next": "14.2.26",
@@ -16,14 +17,18 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "22.13.5",
     "@types/react": "18.3.20",
     "@types/react-dom": "18.3.6",
     "autoprefixer": "10.4.20",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.26",
+    "jsdom": "26.1.0",
     "postcss": "8.5.2",
     "tailwindcss": "3.4.17",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "vitest": "3.2.4"
   }
 }
