--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -18,6 +18,50 @@ jobs:
       - name: Sync dependencies
         run: uv sync --dev
 
+      - name: Validate hardened runtime safety toggles
+        env:
+          ENVIRONMENT: ci
+          API_BEARER_TOKEN: release-gate-token
+          ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
+        run: |
+          uv run python - <<'PY'
+          import os
+          from immcad_api.settings import load_settings
+
+          load_settings()
+          os.environ["ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS"] = "true"
+          try:
+              load_settings()
+          except ValueError as exc:
+              if "ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS must be false" not in str(exc):
+                  raise
+          else:
+              raise SystemExit("Expected hardened-mode synthetic citation guard to fail")
+          PY
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend-web/package-lock.json
+
+      - name: Install frontend dependencies
+        run: npm ci --prefix frontend-web
+
+      - name: Frontend typecheck
+        run: npm run typecheck --prefix frontend-web
+
+      - name: Frontend build
+        run: npm run build --prefix frontend-web
+
+      - name: Frontend contract tests
+        env:
+          CI: "true"
+        run: |
+          mkdir -p artifacts/evals
+          npm run test --prefix frontend-web -- --reporter=default --reporter=junit --outputFile=artifacts/evals/frontend-test-summary.xml
+
       - name: Validate legal review checklist (structure)
         run: uv run python scripts/validate_legal_review_checklist.py
 
@@ -42,6 +86,7 @@ jobs:
           API_BEARER_TOKEN: release-smoke-token
           ENVIRONMENT: ci
           ENABLE_SCAFFOLD_PROVIDER: "true"
+          ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
         run: bash scripts/run_api_smoke_tests.sh
 
       - name: Repository hygiene checks
@@ -57,3 +102,4 @@ jobs:
             artifacts/evals/jurisdiction-eval-report.md
             artifacts/evals/jurisdictional-suite-report.json
             artifacts/evals/jurisdictional-suite-report.md
+            artifacts/evals/frontend-test-summary.xml
