--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Validate hardened runtime safety toggles
         env:
+          PYTHONPATH: src
           ENVIRONMENT: ci
           API_BEARER_TOKEN: quality-gate-token
           ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
