feat: phase2 frontend + authoritative runtime hardening (#9)
* feat: [US-001] - Add domain-leak scanner for Canada scope

* feat: [US-002] - Wire domain-leak scanner into quality gates

* feat: [US-003] - [Add audit log events for policy blocks and provider failures]

* feat: [US-004] - [Add ingestion checkpoint recovery runbook]

* chore(ralph): harden codex setup and preflight

* feat: [US-005] - [Add release artifact verification checklist step]

* chore: reset ralph backlog for production-readiness v1

* feat: [US-001] - [Complete required Canada legal source registry]

* feat: [US-002] - [Enforce strict source-registry validation]

* feat: [US-003] - [Disable synthetic CanLII case output in production]

* feat: US-004 - Harden policy refusal coverage

* feat: [US-005] - [Enforce no synthetic citations in production]

* feat: [US-006] - [Lock provider routing contract]

* feat: [US-007] - [Strengthen API security baseline enforcement]

* feat: [US-008] - [Add PII-minimizing audit logging guarantees]

* feat: [US-009] - [Enforce legal release checklist sign-off]

* feat: [US-010] - [Create production observability baseline]

* feat: US-011 - Define backup and recovery operational targets

* feat: [US-012] - [Scaffold Next.js minimal chat UI plan and integration contract]

* chore: reset ralph backlog for phase2 frontend + authoritative runtime

* feat: [US-001] - [Correct authoritative legal source links]

* feat: [US-002] - Disable synthetic CanLII fallback in production

* feat: [US-003] - [Enforce no synthetic citations in production]

* feat: [US-004] - Implement grounded citation adapter contract

* feat: [US-005] - [Expand policy refusal coverage]

* feat: [US-006] - [Scaffold Next.js and Tailwind frontend]

* feat: [US-007] - [Implement frontend API integration with trace IDs]

* feat: [US-008] - [Render citation chips and refusal/error UX states]

* feat: [US-009] - [Add frontend quality and contract tests]

* feat: [US-010] - [Add frontend CI and release

--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -21,6 +21,49 @@ jobs:
       - name: Sync dependencies
         run: uv sync --dev
 
+      - name: Validate hardened runtime safety toggles
+        env:
+          PYTHONPATH: src
+          ENVIRONMENT: ci
+          API_BEARER_TOKEN: quality-gate-token
+          ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
+        run: |
+          uv run python - <<'PY'
+          import os
+          from immcad_api.settings import load_settings
+
+          load_settings()
+          os.environ["ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS"] = "true"
+          try:
+              load_settings()
+          except ValueError as exc:
+              if "ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS must be false" not in str(exc):
+                  raise
+          else:
+              raise SystemExit("Expected hardened-mode synthetic citation guard to fail")
+          PY
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend-web/package-lock.json
+
+      - name: Install frontend dependencies
+        run: npm ci --prefix frontend-web
+
+      - name: Frontend typecheck
+        run: npm run typecheck --prefix frontend-web
+
+      - name: Frontend build
+        run: npm run build --prefix frontend-web
+
+      - name: Frontend contract tests
+        env:
+          CI: "true"
+        run: npm run test --prefix frontend-web
+
       - name: Lint API and tests scope
         run: uv run ruff check src/immcad_api tests
 
@@ -39,6 +82,9 @@ jobs:
 
       - name: Validate legal review checklist template
         run: uv run python scripts/validate_legal_review_checklist.py
+
+      - name: Scan for Canada domain leaks
+        run: uv run python scripts/scan_domain_leaks.py
 
       - name: Generate jurisdictional evaluation report
         env:
