--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ API_BEARER_TOKEN=your-api-bearer-token
 ENVIRONMENT=development
 PROVIDER_CIRCUIT_BREAKER_FAILURE_THRESHOLD=3
 PROVIDER_CIRCUIT_BREAKER_OPEN_SECONDS=30
+ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
+
+# Frontend (frontend-web)
+NEXT_PUBLIC_IMMCAD_API_BASE_URL=http://127.0.0.1:8000
+NEXT_PUBLIC_IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
