--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -2,12 +2,6 @@ name: Release Gates
 
 on:
   workflow_dispatch:
-    inputs:
-      require_legal_checkboxes:
-        description: "Require all legal-review checklist items to be checked"
-        required: true
-        type: boolean
-        default: true
 
 jobs:
   release-readiness:
@@ -24,11 +18,54 @@ jobs:
       - name: Sync dependencies
         run: uv sync --dev
 
+      - name: Validate hardened runtime safety toggles
+        env:
+          ENVIRONMENT: ci
+          API_BEARER_TOKEN: release-gate-token
+          ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
+        run: |
+          uv run python - <<'PY'
+          import os
+          from immcad_api.settings import load_settings
+
+          load_settings()
+          os.environ["ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS"] = "true"
+          try:
+              load_settings()
+          except ValueError as exc:
+              if "ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS must be false" not in str(exc):
+                  raise
+          else:
+              raise SystemExit("Expected hardened-mode synthetic citation guard to fail")
+          PY
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend-web/package-lock.json
+
+      - name: Install frontend dependencies
+        run: npm ci --prefix frontend-web
+
+      - name: Frontend typecheck
+        run: npm run typecheck --prefix frontend-web
+
+      - name: Frontend build
+        run: npm run build --prefix frontend-web
+
+      - name: Frontend contract tests
+        env:
+          CI: "true"
+        run: |
+          mkdir -p artifacts/evals
+          npm run test --prefix frontend-web -- --reporter=default --reporter=junit --outputFile=artifacts/evals/frontend-test-summary.xml
+
       - name: Validate legal review checklist (structure)
         run: uv run python scripts/validate_legal_review_checklist.py
 
       - name: Validate legal review checklist (strict)
-        if: ${{ inputs.require_legal_checkboxes == true }}
         run: uv run python scripts/validate_legal_review_checklist.py --require-checked
 
       - name: Generate jurisdictional readiness report
@@ -41,12 +78,23 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/run_jurisdictional_test_suite.py
 
-      - name: Run staging API smoke tests
+      - name: Validate release evaluation artifacts
+        run: uv run python scripts/validate_release_artifacts.py
+
+      - name: Run staging end-to-end smoke tests
         env:
           API_BEARER_TOKEN: release-smoke-token
-          ENVIRONMENT: ci
+          ENVIRONMENT: staging
           ENABLE_SCAFFOLD_PROVIDER: "true"
+          ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "true"
+          STAGING_SMOKE_REPORT_PATH: artifacts/evals/staging-smoke-report.json
         run: bash scripts/run_api_smoke_tests.sh
+
+      - name: Rollback trigger guidance
+        if: failure()
+        run: |
+          echo "Staging smoke checks failed."
+          echo "Follow rollback trigger criteria in docs/release/staging-smoke-rollback-criteria.md."
 
       - name: Repository hygiene checks
         run: bash scripts/check_repository_hygiene.sh
@@ -61,3 +109,5 @@ jobs:
             artifacts/evals/jurisdiction-eval-report.md
             artifacts/evals/jurisdictional-suite-report.json
             artifacts/evals/jurisdictional-suite-report.md
+            artifacts/evals/frontend-test-summary.xml
+            artifacts/evals/staging-smoke-report.json
