--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,12 @@ REDIS_URL=redis://localhost:6379/0
 CANLII_API_KEY=your-canlii-api-key
 API_BEARER_TOKEN=your-api-bearer-token
 ENVIRONMENT=development
+CORS_ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
 PROVIDER_CIRCUIT_BREAKER_FAILURE_THRESHOLD=3
 PROVIDER_CIRCUIT_BREAKER_OPEN_SECONDS=30
 ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
 
 # Frontend (frontend-web)
-NEXT_PUBLIC_IMMCAD_API_BASE_URL=http://127.0.0.1:8000
-NEXT_PUBLIC_IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
+NEXT_PUBLIC_IMMCAD_API_BASE_URL=/api
+IMMCAD_API_BASE_URL=http://127.0.0.1:8000
+IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
