--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 OPENAI_API_KEY=your-openai-api-key
 GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL=gemini-3-flash-preview
+GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 REDIS_URL=redis://localhost:6379/0
 CANLII_API_KEY=your-canlii-api-key
 API_BEARER_TOKEN=your-api-bearer-token
