feat(config): support gemini-only provider runtime

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 OPENAI_API_KEY=your-openai-api-key
 GEMINI_API_KEY=your-gemini-api-key
+ENABLE_OPENAI_PROVIDER=true
+PRIMARY_PROVIDER=openai
 GEMINI_MODEL=gemini-3-flash-preview
 GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 REDIS_URL=redis://localhost:6379/0
