--- a/.github/workflows/ingestion-jobs.yml
+++ b/.github/workflows/ingestion-jobs.yml
@@ -2,12 +2,6 @@ name: Ingestion Jobs
 
 on:
   workflow_dispatch:
-    inputs:
-      fail_on_error:
-        description: "Fail workflow when any source ingestion fails"
-        required: true
-        type: boolean
-        default: true
   schedule:
     - cron: "15 6 * * *"
 
@@ -47,24 +41,13 @@ jobs:
             ingestion-state-
 
       - name: Run ingestion jobs
-        env:
-          DISPATCH_FAIL_ON_ERROR: ${{ github.event.inputs.fail_on_error || '' }}
         run: |
           set -euo pipefail
-          if [ "${{ github.event_name }}" = "schedule" ]; then
-            fail_on_error="true"
-          elif [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
-            fail_on_error="${DISPATCH_FAIL_ON_ERROR:-true}"
-          else
-            fail_on_error="true"
-          fi
-
-          cmd=(uv run python scripts/run_ingestion_jobs.py --cadence "${{ matrix.cadence }}" --output "artifacts/ingestion/ingestion-${{ matrix.cadence }}.json" --state-path ".cache/immcad/ingestion-checkpoints.json")
-          if [ "$fail_on_error" = "true" ]; then
-            cmd+=(--fail-on-error)
-          fi
-
-          "${cmd[@]}"
+          uv run python scripts/run_ingestion_jobs.py \
+            --cadence "${{ matrix.cadence }}" \
+            --output "artifacts/ingestion/ingestion-${{ matrix.cadence }}.json" \
+            --state-path ".cache/immcad/ingestion-checkpoints.json" \
+            --fail-on-error
 
       - name: Upload ingestion artifact
         if: always()
