--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -94,6 +94,11 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/validate_source_registry.py
 
+      - name: Run case-law conformance (warning-only)
+        env:
+          PYTHONPATH: src
+        run: uv run python scripts/run_case_law_conformance.py --output artifacts/ingestion/case-law-conformance-report.json
+
       - name: Validate legal review checklist template
         run: uv run python scripts/validate_legal_review_checklist.py
 
@@ -152,3 +157,10 @@ jobs:
           path: |
             artifacts/docs/doc-maintenance-report.md
             artifacts/docs/doc-maintenance-report.json
+
+      - name: Upload case-law conformance artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: case-law-conformance-report
+          path: artifacts/ingestion/case-law-conformance-report.json
