--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -86,6 +86,11 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/run_jurisdictional_test_suite.py
 
+      - name: Run case-law conformance (strict)
+        env:
+          PYTHONPATH: src
+        run: uv run python scripts/run_case_law_conformance.py --strict --output artifacts/ingestion/case-law-conformance-report.json
+
       - name: Validate release evaluation artifacts
         run: uv run python scripts/validate_release_artifacts.py
 
@@ -119,3 +124,4 @@ jobs:
             artifacts/evals/jurisdictional-suite-report.md
             artifacts/evals/frontend-test-summary.xml
             artifacts/evals/staging-smoke-report.json
+            artifacts/ingestion/case-law-conformance-report.json
