feat(ingestion): harden court source policy and registry validation

--- a/config/source_policy.yaml
+++ b/config/source_policy.yaml
@@ -183,7 +183,7 @@
       "source_class": "unofficial",
       "internal_ingest_allowed": true,
       "production_ingest_allowed": true,
-      "answer_citation_allowed": true,
+      "answer_citation_allowed": false,
       "export_fulltext_allowed": false,
       "license_notes": "Reference source for terms compliance; no full-text export.",
       "review_owner": "legal-compliance",
@@ -227,7 +227,7 @@
       "source_class": "unofficial",
       "internal_ingest_allowed": true,
       "production_ingest_allowed": false,
-      "answer_citation_allowed": true,
+      "answer_citation_allowed": false,
       "export_fulltext_allowed": false,
       "license_notes": "Internal-only until explicit legal sign-off for production use.",
       "review_owner": "legal-compliance",
@@ -238,7 +238,7 @@
       "source_class": "unofficial",
       "internal_ingest_allowed": true,
       "production_ingest_allowed": false,
-      "answer_citation_allowed": true,
+      "answer_citation_allowed": false,
       "export_fulltext_allowed": false,
       "license_notes": "Internal-only until CC BY-NC and upstream terms are approved for production.",
       "review_owner": "legal-compliance",
