--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ CORS_ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
 PROVIDER_CIRCUIT_BREAKER_FAILURE_THRESHOLD=3
 PROVIDER_CIRCUIT_BREAKER_OPEN_SECONDS=30
 ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
+CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org
+SOURCE_POLICY_PATH=config/source_policy.yaml
 
 # Frontend (frontend-web)
 NEXT_PUBLIC_IMMCAD_API_BASE_URL=/api
