ci(gates): expand quality and release checks

--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -2,6 +2,13 @@ name: Release Gates
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - "v*"
+
+concurrency:
+  group: staging-smoke-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   release-readiness:
