--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -2,6 +2,13 @@ name: Release Gates
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - "v*"
+
+concurrency:
+  group: staging-smoke-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   release-readiness:
@@ -23,6 +30,7 @@ jobs:
           ENVIRONMENT: ci
           API_BEARER_TOKEN: release-gate-token
           ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
+          CITATION_TRUSTED_DOMAINS: laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org
         run: |
           uv run python - <<'PY'
           import os
@@ -91,7 +99,7 @@ jobs:
         run: bash scripts/run_api_smoke_tests.sh
 
       - name: Rollback trigger guidance
-        if: failure()
+        if: ${{ failure() || cancelled() }}
         run: |
           echo "Staging smoke checks failed."
           echo "Follow rollback trigger criteria in docs/release/staging-smoke-rollback-criteria.md."
