--- a/.github/workflows/docs-maintenance.yml
+++ b/.github/workflows/docs-maintenance.yml
@@ -46,6 +46,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: docs-maintenance-report
+          if-no-files-found: error
           path: |
             artifacts/docs/doc-maintenance-report.md
             artifacts/docs/doc-maintenance-report.json
