--- a/.github/workflows/ops-alerts.yml
+++ b/.github/workflows/ops-alerts.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      issues: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,6 +39,7 @@ jobs:
           fi
 
       - name: Evaluate ops metrics alert thresholds
+        id: evaluate
         env:
           IMMCAD_API_BASE_URL: ${{ secrets.IMMCAD_API_BASE_URL }}
           IMMCAD_API_BEARER_TOKEN: ${{ secrets.IMMCAD_API_BEARER_TOKEN }}
@@ -51,10 +53,57 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ops-alert-eval-report
+          if-no-files-found: error
           path: artifacts/ops/ops-alert-eval.json
 
+      - name: Parse ops alert report
+        id: eval-report
+        if: always()
+        run: |
+          if [ ! -f artifacts/ops/ops-alert-eval.json ]; then
+            echo "breached=false" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+          status="$(uv run python - <<'PY'
+          import json
+          from pathlib import Path
+
+          payload = json.loads(Path("artifacts/ops/ops-alert-eval.json").read_text(encoding="utf-8"))
+          print(payload.get("status", "unknown"))
+          PY
+          )"
+          if [ "$status" = "pass" ]; then
+            echo "breached=false" >> "$GITHUB_OUTPUT"
+          else
+            echo "breached=true" >> "$GITHUB_OUTPUT"
+          fi
+          echo "status=$status" >> "$GITHUB_OUTPUT"
+
       - name: Incident runbook guidance
-        if: failure()
+        if: ${{ failure() || steps.eval-report.outputs.breached == 'true' }}
         run: |
           echo "Operational thresholds breached."
           echo "Follow docs/release/incident-observability-runbook.md."
+
+      - name: Create incident issue
+        if: ${{ steps.eval-report.outputs.breached == 'true' }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const title = `Ops metrics breach detected (${context.runId})`;
+            const body = [
+              "Automated ops alert threshold breach detected.",
+              "",
+              `- Workflow run: ${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`,
+              `- Report status: ${process.env.REPORT_STATUS || "unknown"}`,
+              "- Runbook: docs/release/incident-observability-runbook.md"
+            ].join("\\n");
+            await github.rest.issues.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title,
+              body,
+              labels: ["incident", "ops-alert"]
+            });
+        env:
+          REPORT_STATUS: ${{ steps.eval-report.outputs.status }}
