chore(repo): sync env templates and reconciliation task records

--- a/backend-vercel/.env.example
+++ b/backend-vercel/.env.example
@@ -2,12 +2,15 @@ ENVIRONMENT=development
 API_BEARER_TOKEN=your-api-bearer-token
 ENABLE_SCAFFOLD_PROVIDER=true
 ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=false
+EXPORT_POLICY_GATE_ENABLED=false
 ENABLE_OPENAI_PROVIDER=false
 PRIMARY_PROVIDER=scaffold
 # Required in production/prod/ci: explicit grounding citation domain allowlist.
 CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org
 # Required when ENABLE_OPENAI_PROVIDER=true (recommended to set even when scaffold is primary).
 # OPENAI_API_KEY=your-openai-api-key
+# Required when GEMINI_MODEL or GEMINI_MODEL_FALLBACKS are configured.
+# GEMINI_API_KEY=your-gemini-api-key
 # Optional but recommended for shared caching/rate-limit state.
 # REDIS_URL=redis://localhost:6379/0
 # Preview model example: prefer a team-managed stable alias + monitor deprecations for production.
