fix(ci): harden docs audit env and payload parse accounting

--- a/.github/workflows/docs-maintenance.yml
+++ b/.github/workflows/docs-maintenance.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Run docs audit
         env:
+          PYTHONPATH: src
           CHECK_EXTERNAL_LINKS: ${{ github.event.inputs.check_external_links || 'false' }}
         run: |
           set -euo pipefail
