--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -17,10 +17,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Dependency review (PR)
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && vars.DEPENDENCY_REVIEW_ENABLED == 'true'
         uses: actions/dependency-review-action@05fe4576374b728f0c523d6a13d64c25081e0803
         with:
           fail-on-severity: critical
+
+      - name: Dependency review capability warning
+        if: github.event_name == 'pull_request' && vars.DEPENDENCY_REVIEW_ENABLED != 'true'
+        run: |
+          echo "::warning::Dependency review skipped because vars.DEPENDENCY_REVIEW_ENABLED is not 'true' or Dependency Graph is unavailable."
+          echo "::warning::Enable repository Dependency Graph and set DEPENDENCY_REVIEW_ENABLED=true to enforce CVE gating."
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
