feat(frontend): modularize chat shell with rollout flag

--- a/frontend-web/.env.example
+++ b/frontend-web/.env.example
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_IMMCAD_API_BASE_URL=/api
+NEXT_PUBLIC_IMMCAD_FRONTEND_REDESIGN_ENABLED=true
 IMMCAD_API_BASE_URL=https://api.example.com
 IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
