fix(ci): set PYTHONPATH for release hardened-toggle check

--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -36,6 +36,7 @@ jobs:
 
       - name: Validate hardened runtime safety toggles
         env:
+          PYTHONPATH: src
           ENVIRONMENT: ci
           API_BEARER_TOKEN: release-gate-token
           ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
