--- a/.env.example
+++ b/.env.example
@@ -2,18 +2,27 @@ OPENAI_API_KEY=your-openai-api-key
 GEMINI_API_KEY=your-gemini-api-key
 ENABLE_OPENAI_PROVIDER=true
 PRIMARY_PROVIDER=openai
+ENABLE_SCAFFOLD_PROVIDER=true
 GEMINI_MODEL=gemini-3-flash-preview
 GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 REDIS_URL=redis://localhost:6379/0
 CANLII_API_KEY=your-canlii-api-key
 API_BEARER_TOKEN=your-api-bearer-token
 ENVIRONMENT=development
+EXPORT_POLICY_GATE_ENABLED=false
 CORS_ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
 PROVIDER_CIRCUIT_BREAKER_FAILURE_THRESHOLD=3
 PROVIDER_CIRCUIT_BREAKER_OPEN_SECONDS=30
 ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
 CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org
 SOURCE_POLICY_PATH=config/source_policy.yaml
+
+# Production/prod/ci baseline overrides (required for hardened mode):
+# ENVIRONMENT=production
+# ENABLE_SCAFFOLD_PROVIDER=false
+# ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=false
+# EXPORT_POLICY_GATE_ENABLED=true
+# PRIMARY_PROVIDER=gemini
 
 # Frontend (frontend-web)
 NEXT_PUBLIC_IMMCAD_API_BASE_URL=/api
