--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -39,6 +39,13 @@ jobs:
           PYTHONPATH: src
           ENVIRONMENT: ci
           API_BEARER_TOKEN: release-gate-token
+          ENABLE_SCAFFOLD_PROVIDER: "false"
+          ENABLE_OPENAI_PROVIDER: "true"
+          PRIMARY_PROVIDER: openai
+          OPENAI_API_KEY: release-gate-openai-key
+          GEMINI_API_KEY: release-gate-gemini-key
+          CANLII_API_KEY: release-gate-canlii-key
+          EXPORT_POLICY_GATE_ENABLED: "true"
           ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
           CITATION_TRUSTED_DOMAINS: laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org
         run: |
