feat(settings): allow gemini-only mvp with case search toggle

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ PROVIDER_CIRCUIT_BREAKER_OPEN_SECONDS=30
 ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
 CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org
 SOURCE_POLICY_PATH=config/source_policy.yaml
+ENABLE_CASE_SEARCH=true
 
 # Production/prod/ci baseline overrides (required for hardened mode):
 # ENVIRONMENT=production
@@ -23,6 +24,7 @@ SOURCE_POLICY_PATH=config/source_policy.yaml
 # ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=false
 # EXPORT_POLICY_GATE_ENABLED=true
 # PRIMARY_PROVIDER=gemini
+# ENABLE_CASE_SEARCH=false
 
 # Frontend (frontend-web)
 NEXT_PUBLIC_IMMCAD_API_BASE_URL=/api
