--- a/backend-vercel/.env.example
+++ b/backend-vercel/.env.example
@@ -17,6 +17,7 @@ CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.ca
 GEMINI_MODEL=gemini-3-flash-preview
 GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 CORS_ALLOWED_ORIGINS=https://your-frontend.example.com
+ENABLE_CASE_SEARCH=true
 
 # Production/prod/ci baseline overrides (required for hardened mode):
 # ENVIRONMENT=production
@@ -24,3 +25,4 @@ CORS_ALLOWED_ORIGINS=https://your-frontend.example.com
 # ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=false
 # EXPORT_POLICY_GATE_ENABLED=true
 # PRIMARY_PROVIDER=gemini
+# ENABLE_CASE_SEARCH=false
