--- a/backend-vercel/.env.example
+++ b/backend-vercel/.env.example
@@ -17,3 +17,12 @@ CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.ca
 GEMINI_MODEL=gemini-3-flash-preview
 GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 CORS_ALLOWED_ORIGINS=https://your-frontend.example.com
+ENABLE_CASE_SEARCH=true
+
+# Production/prod/ci baseline overrides (required for hardened mode):
+# ENVIRONMENT=production
+# ENABLE_SCAFFOLD_PROVIDER=false
+# ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=false
+# EXPORT_POLICY_GATE_ENABLED=true
+# PRIMARY_PROVIDER=gemini
+# ENABLE_CASE_SEARCH=false
