--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -108,6 +108,9 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/validate_source_registry.py
 
+      - name: Validate backend-vercel source sync
+        run: uv run python scripts/validate_backend_vercel_source_sync.py
+
       - name: Run case-law conformance (warning-only)
         env:
           PYTHONPATH: src
