--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -103,6 +103,9 @@ jobs:
           PYTHONPATH: src
         run: uv run python scripts/run_jurisdictional_test_suite.py
 
+      - name: Validate backend-vercel source sync
+        run: uv run python scripts/validate_backend_vercel_source_sync.py
+
       - name: Run case-law conformance (strict)
         env:
           PYTHONPATH: src
