--- a/frontend-web/.env.example
+++ b/frontend-web/.env.example
@@ -1,4 +1,6 @@
 NEXT_PUBLIC_IMMCAD_API_BASE_URL=/api
 NEXT_PUBLIC_IMMCAD_FRONTEND_REDESIGN_ENABLED=true
+# Set to false in production to hide operational/debug side panels.
+NEXT_PUBLIC_IMMCAD_SHOW_OPERATIONS_PANELS=true
 IMMCAD_API_BASE_URL=https://api.example.com
 IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
