fix(prod): harden gemini runtime and preserve case-search API contract

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ GEMINI_API_KEY=your-gemini-api-key
 ENABLE_OPENAI_PROVIDER=true
 PRIMARY_PROVIDER=openai
 ENABLE_SCAFFOLD_PROVIDER=true
-GEMINI_MODEL=gemini-3-flash-preview
+GEMINI_MODEL=gemini-2.5-flash-lite
 GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 REDIS_URL=redis://localhost:6379/0
 CANLII_API_KEY=your-canlii-api-key
