--- a/backend-vercel/.env.example
+++ b/backend-vercel/.env.example
@@ -13,8 +13,8 @@ CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.ca
 # GEMINI_API_KEY=your-gemini-api-key
 # Optional but recommended for shared caching/rate-limit state.
 # REDIS_URL=redis://localhost:6379/0
-# Preview model example: prefer a team-managed stable alias + monitor deprecations for production.
-GEMINI_MODEL=gemini-3-flash-preview
+# Stable model defaults for production-oriented Gemini runtime.
+GEMINI_MODEL=gemini-2.5-flash-lite
 GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 CORS_ALLOWED_ORIGINS=https://your-frontend.example.com
 ENABLE_CASE_SEARCH=true
