--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -46,6 +46,8 @@ jobs:
           PRIMARY_PROVIDER: openai
           OPENAI_API_KEY: quality-gate-openai-key
           GEMINI_API_KEY: quality-gate-gemini-key
+          GEMINI_MODEL: gemini-2.5-flash-lite
+          GEMINI_MODEL_FALLBACKS: gemini-2.5-flash
           CANLII_API_KEY: quality-gate-canlii-key
           EXPORT_POLICY_GATE_ENABLED: "true"
           ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS: "false"
