--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,7 @@ ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=true
 CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.canada.ca,canlii.org
 SOURCE_POLICY_PATH=config/source_policy.yaml
 ENABLE_CASE_SEARCH=true
+ENABLE_OFFICIAL_CASE_SOURCES=false
 
 # Production/prod/ci baseline overrides (required for hardened mode):
 # ENVIRONMENT=production
@@ -24,7 +25,8 @@ ENABLE_CASE_SEARCH=true
 # ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=false
 # EXPORT_POLICY_GATE_ENABLED=true
 # PRIMARY_PROVIDER=gemini
-# ENABLE_CASE_SEARCH=false
+# ENABLE_CASE_SEARCH=true
+# ENABLE_OFFICIAL_CASE_SOURCES=true
 
 # Frontend (frontend-web)
 NEXT_PUBLIC_IMMCAD_API_BASE_URL=/api
