--- a/backend-vercel/.env.example
+++ b/backend-vercel/.env.example
@@ -18,6 +18,7 @@ GEMINI_MODEL=gemini-2.5-flash-lite
 GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 CORS_ALLOWED_ORIGINS=https://your-frontend.example.com
 ENABLE_CASE_SEARCH=true
+ENABLE_OFFICIAL_CASE_SOURCES=true
 
 # Production/prod/ci baseline overrides (required for hardened mode):
 # ENVIRONMENT=production
@@ -25,4 +26,5 @@ ENABLE_CASE_SEARCH=true
 # ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=false
 # EXPORT_POLICY_GATE_ENABLED=true
 # PRIMARY_PROVIDER=gemini
-# ENABLE_CASE_SEARCH=false
+# ENABLE_CASE_SEARCH=true
+# ENABLE_OFFICIAL_CASE_SOURCES=true
