--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,9 +39,24 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "mypy>=1.11.2",
     "pytest>=8.3.5",
     "ruff>=0.11.0",
 ]
 
 [tool.pytest.ini_options]
 pythonpath = ["src", "."]
+
+[tool.ruff]
+# Keep lint gates focused on runtime/source files; legacy notebooks are non-gating.
+extend-exclude = ["*.ipynb"]
+
+[tool.mypy]
+python_version = "3.11"
+warn_unused_configs = true
+ignore_missing_imports = true
+follow_imports = "skip"
+files = [
+    "backend-vercel/api/index.py",
+    "scripts/validate_backend_vercel_source_sync.py",
+]
