--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,8 @@ GEMINI_MODEL=gemini-2.5-flash-lite
 GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 REDIS_URL=redis://localhost:6379/0
 CANLII_API_KEY=your-canlii-api-key
-API_BEARER_TOKEN=your-api-bearer-token
+IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
+# API_BEARER_TOKEN=your-api-bearer-token  # compatibility alias
 ENVIRONMENT=development
 EXPORT_POLICY_GATE_ENABLED=false
 CORS_ALLOWED_ORIGINS=http://127.0.0.1:3000,http://localhost:3000
@@ -18,6 +19,8 @@ CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.ca
 SOURCE_POLICY_PATH=config/source_policy.yaml
 ENABLE_CASE_SEARCH=true
 ENABLE_OFFICIAL_CASE_SOURCES=false
+OFFICIAL_CASE_CACHE_TTL_SECONDS=300
+OFFICIAL_CASE_STALE_CACHE_TTL_SECONDS=900
 
 # Production/prod/ci baseline overrides (required for hardened mode):
 # ENVIRONMENT=production
@@ -27,8 +30,10 @@ ENABLE_OFFICIAL_CASE_SOURCES=false
 # PRIMARY_PROVIDER=gemini
 # ENABLE_CASE_SEARCH=true
 # ENABLE_OFFICIAL_CASE_SOURCES=true
+# OFFICIAL_CASE_CACHE_TTL_SECONDS=300
+# OFFICIAL_CASE_STALE_CACHE_TTL_SECONDS=900
 
 # Frontend (frontend-web)
 NEXT_PUBLIC_IMMCAD_API_BASE_URL=/api
 IMMCAD_API_BASE_URL=http://127.0.0.1:8000
-IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
+# Frontend proxy reads the same IMMCAD_API_BEARER_TOKEN value defined above.
