--- a/backend-vercel/.env.example
+++ b/backend-vercel/.env.example
@@ -1,5 +1,6 @@
 ENVIRONMENT=development
-API_BEARER_TOKEN=your-api-bearer-token
+IMMCAD_API_BEARER_TOKEN=your-api-bearer-token
+# API_BEARER_TOKEN=your-api-bearer-token  # compatibility alias
 ENABLE_SCAFFOLD_PROVIDER=true
 ALLOW_SCAFFOLD_SYNTHETIC_CITATIONS=false
 EXPORT_POLICY_GATE_ENABLED=false
@@ -19,6 +20,8 @@ GEMINI_MODEL_FALLBACKS=gemini-2.5-flash
 CORS_ALLOWED_ORIGINS=https://your-frontend.example.com
 ENABLE_CASE_SEARCH=true
 ENABLE_OFFICIAL_CASE_SOURCES=true
+OFFICIAL_CASE_CACHE_TTL_SECONDS=300
+OFFICIAL_CASE_STALE_CACHE_TTL_SECONDS=900
 
 # Production/prod/ci baseline overrides (required for hardened mode):
 # ENVIRONMENT=production
@@ -28,3 +31,5 @@ ENABLE_OFFICIAL_CASE_SOURCES=true
 # PRIMARY_PROVIDER=gemini
 # ENABLE_CASE_SEARCH=true
 # ENABLE_OFFICIAL_CASE_SOURCES=true
+# OFFICIAL_CASE_CACHE_TTL_SECONDS=300
+# OFFICIAL_CASE_STALE_CACHE_TTL_SECONDS=900
