--- a/.github/workflows/release-gates.yml
+++ b/.github/workflows/release-gates.yml
@@ -13,12 +13,14 @@ concurrency:
 jobs:
   release-readiness:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@e58605a9b6da7c637471fab8847a5e5a6b8df081 # v5
         with:
           python-version: "3.11"
 
@@ -37,7 +39,7 @@ jobs:
       - name: Validate hardened runtime safety toggles
         env:
           PYTHONPATH: src
-          ENVIRONMENT: ci
+          IMMCAD_ENVIRONMENT: ci-smoke
           API_BEARER_TOKEN: release-gate-token
           ENABLE_SCAFFOLD_PROVIDER: "false"
           ENABLE_OPENAI_PROVIDER: "true"
@@ -65,7 +67,7 @@ jobs:
           PY
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
         with:
           node-version: "20"
           cache: "npm"
@@ -134,7 +136,7 @@ jobs:
 
       - name: Upload release evaluation artifacts
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: release-eval-artifacts
           path: |
