--- a/.github/workflows/ingestion-jobs.yml
+++ b/.github/workflows/ingestion-jobs.yml
@@ -20,10 +20,10 @@ jobs:
             run_on_schedule: true
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@e58605a9b6da7c637471fab8847a5e5a6b8df081 # v5
         with:
           python-version: "3.11"
 
@@ -31,7 +31,7 @@ jobs:
         run: uv sync --dev
 
       - name: Restore ingestion checkpoint cache
-        uses: actions/cache/restore@v4
+        uses: actions/cache/restore@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
         with:
           path: .cache/immcad/ingestion-checkpoints.json
           key: ingestion-state-${{ github.ref_name }}-${{ matrix.cadence }}-${{ github.run_id }}
@@ -50,14 +50,14 @@ jobs:
 
       - name: Upload ingestion artifact
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: ingestion-${{ matrix.cadence }}-report
           path: artifacts/ingestion/ingestion-${{ matrix.cadence }}.json
 
       - name: Save ingestion checkpoint cache
         if: always()
-        uses: actions/cache/save@v4
+        uses: actions/cache/save@0057852bfaa89a56745cba8c7296529d2fc39830 # v4
         with:
           path: .cache/immcad/ingestion-checkpoints.json
           key: ingestion-state-${{ github.ref_name }}-${{ matrix.cadence }}-${{ github.run_id }}
