--- a/.github/workflows/quality-gates.yml
+++ b/.github/workflows/quality-gates.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+concurrency:
+  group: quality-gates-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
@@ -14,7 +18,7 @@ jobs:
       pull-requests: read
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
 
       - name: Dependency review (PR)
         if: github.event_name == 'pull_request' && vars.DEPENDENCY_REVIEW_ENABLED == 'true'
@@ -29,7 +33,7 @@ jobs:
           echo "::warning::Enable repository Dependency Graph and set DEPENDENCY_REVIEW_ENABLED=true to enforce CVE gating."
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@e58605a9b6da7c637471fab8847a5e5a6b8df081 # v5
         with:
           python-version: "3.11"
 
@@ -39,7 +43,7 @@ jobs:
       - name: Validate hardened runtime safety toggles
         env:
           PYTHONPATH: src
-          ENVIRONMENT: ci
+          IMMCAD_ENVIRONMENT: ci-smoke
           API_BEARER_TOKEN: quality-gate-token
           ENABLE_SCAFFOLD_PROVIDER: "false"
           ENABLE_OPENAI_PROVIDER: "true"
@@ -69,7 +73,7 @@ jobs:
           PY
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4
         with:
           node-version: "20"
           cache: "npm"
@@ -146,7 +150,7 @@ jobs:
 
       - name: Upload jurisdictional evaluation artifact
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: jurisdiction-eval-report
           path: |
@@ -155,7 +159,7 @@ jobs:
 
       - name: Upload jurisdictional suite artifact
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: jurisdiction-suite-report
           path: |
@@ -164,14 +168,14 @@ jobs:
 
       - name: Upload ingestion smoke artifact
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: ingestion-smoke-report
           path: artifacts/ingestion/ingestion-smoke-report.json
 
       - name: Upload docs maintenance artifact
         if: always()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
         with:
           name: docs-maintenance-report
           if-no-files-found: ignore
