docs(release): add case-law readiness checklist and canlii rollout plan

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ CITATION_TRUSTED_DOMAINS=laws-lois.justice.gc.ca,justice.gc.ca,canada.ca,ircc.ca
 SOURCE_POLICY_PATH=config/source_policy.yaml
 ENABLE_CASE_SEARCH=true
 ENABLE_OFFICIAL_CASE_SOURCES=false
+CASE_SEARCH_OFFICIAL_ONLY_RESULTS=false
 OFFICIAL_CASE_CACHE_TTL_SECONDS=300
 OFFICIAL_CASE_STALE_CACHE_TTL_SECONDS=900
 
@@ -30,6 +31,7 @@ OFFICIAL_CASE_STALE_CACHE_TTL_SECONDS=900
 # PRIMARY_PROVIDER=gemini
 # ENABLE_CASE_SEARCH=true
 # ENABLE_OFFICIAL_CASE_SOURCES=true
+# CASE_SEARCH_OFFICIAL_ONLY_RESULTS=true
 # OFFICIAL_CASE_CACHE_TTL_SECONDS=300
 # OFFICIAL_CASE_STALE_CACHE_TTL_SECONDS=900
 
